le agrego los metodos y anotaciones a factura
por ahora y para probar estan publicos,
