# SubastasWeb/routes/api.php
@@ -11,6 +11,7 @@ use App\Http\Controllers\CategoriaController;
 use App\Http\Controllers\ClienteController;
 use App\Http\Controllers\RematadorController;
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\FacturaController;
 use App\Http\Controllers\MensajeController;
 
 Route::post('/mensaje', [MensajeController::class, 'enviar']);
@@ -29,6 +30,7 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::apiResource('categorias', CategoriaController::class);
     Route::apiResource('clientes', ClienteController::class);
     Route::apiResource('rematadores', RematadorController::class);
+    
 
     // Ruta para obtener el usuario autenticado
     Route::get('/user', function (Request $request) {
@@ -58,3 +60,7 @@ Route::apiResource('categorias', CategoriaController::class);
 Route::apiResource('clientes', ClienteController::class);
 
 Route::apiResource('rematadores', RematadorController::class);
+
+Route::apiResource('facturas', FacturaController::class);
+
+
